--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
 # General
 --------------------------------------------------------------*/
 body {
-  background: #fff;
+  background: #03060D;
   color: #2f3138;
   font-family: "Open Sans", sans-serif;
 }
@@ -36,7 +36,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 400;
   margin: 0 0 20px 0;
   padding: 0;
-  color: #0e1b4d;
+  color: #fff;
 }
 
 .main-page {
@@ -65,7 +65,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #f82249;
+  background: #73F342;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -98,7 +98,7 @@ h1, h2, h3, h4, h5, h6 {
   display: block;
   width: 60px;
   height: 5px;
-  background: #f82249;
+  background: #73F342;
   bottom: 0;
   left: calc(50% - 25px);
 }
@@ -168,7 +168,7 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 .buy-tickets {
   color: #fff;
-  background: #2f3138;
+  background: #73F342;
   padding: 7px 22px;
   margin: 0 0 0 15px;
   border-radius: 50px;
@@ -278,7 +278,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 12px;
 }
 .navbar .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
-  color: #f82249;
+  color: #73F342;
 }
 .navbar .dropdown:hover > ul {
   opacity: 1;
@@ -366,7 +366,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #060c22;
 }
 .navbar-mobile a:hover, .navbar-mobile .active, .navbar-mobile li:hover > a {
-  color: #f82249;
+  color: #73F342;
 }
 .navbar-mobile .getstarted, .navbar-mobile .getstarted:focus {
   margin: 15px;
@@ -392,7 +392,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 12px;
 }
 .navbar-mobile .dropdown ul a:hover, .navbar-mobile .dropdown ul .active:hover, .navbar-mobile .dropdown ul li:hover > a {
-  color: #f82249;
+  color: #73F342;
 }
 .navbar-mobile .dropdown > .dropdown-active {
   display: block;
@@ -449,7 +449,7 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
 }
 #hero h1 span {
-  color: #f82249;
+  color: #73F342;
 }
 @media (max-width: 991px) {
   #hero h1 {
@@ -469,7 +469,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero .play-btn {
   width: 94px;
   height: 94px;
-  background: radial-gradient(#f82249 50%, rgba(101, 111, 150, 0.15) 52%);
+  background: radial-gradient(#73F342 50%, rgba(101, 111, 150, 0.15) 52%);
   border-radius: 50%;
   display: block;
   position: relative;
@@ -512,7 +512,7 @@ h1, h2, h3, h4, h5, h6 {
   background: rgba(198, 16, 0, 0);
 }
 #hero .play-btn:hover::after {
-  border-left: 15px solid #f82249;
+  border-left: 15px solid #73F342;
   transform: scale(20);
 }
 #hero .play-btn:hover::before {
@@ -546,10 +546,10 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
   -webkit-animation-delay: 0.8s;
   animation-delay: 0.8s;
-  border: 2px solid #f82249;
+  border: 2px solid #73F342;
 }
 #hero .about-btn:hover {
-  background: #f82249;
+  background: #73F342;
   color: #fff;
 }
 
@@ -662,7 +662,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
 }
 #speakers .speaker .details a:hover {
-  color: #f82249;
+  color: #73F342;
 }
 #speakers .speaker:hover .details {
   bottom: 0;
@@ -694,7 +694,7 @@ h1, h2, h3, h4, h5, h6 {
   justify-content: center;
 }
 #speakers-details .details .social a:hover {
-  background: #f82249;
+  background: #73F342;
   color: #fff;
 }
 #speakers-details .details .social a i {
@@ -748,7 +748,7 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 #schedule .nav-tabs a.active {
-  background-color: #f82249;
+  background-color: #73F342;
   color: #fff;
 }
 #schedule .sub-heading {
@@ -899,7 +899,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #152b79;
 }
 #hotels a:hover {
-  color: #f82249;
+  color: #73F342;
 }
 #hotels .stars {
   padding: 0 20px;
@@ -932,10 +932,10 @@ h1, h2, h3, h4, h5, h6 {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #f82249;
+  border: 1px solid #73F342;
 }
 #gallery .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #f82249;
+  background-color: #73F342;
 }
 #gallery .swiper-slide-active {
   text-align: center;
@@ -945,7 +945,7 @@ h1, h2, h3, h4, h5, h6 {
     padding: 40px 0;
   }
   #gallery .swiper-slide-active {
-    border: 5px solid #f82249;
+    border: 5px solid #73F342;
     padding: 4px;
     background: #fff;
     z-index: 1;
@@ -1001,7 +1001,7 @@ h1, h2, h3, h4, h5, h6 {
 #faq .faq-list .question {
   display: block;
   position: relative;
-  font-family: #f82249;
+  font-family: #73F342;
   font-size: 18px;
   line-height: 24px;
   font-weight: 400;
@@ -1024,10 +1024,10 @@ h1, h2, h3, h4, h5, h6 {
   display: none;
 }
 #faq .faq-list .collapsed {
-  color: black;
+  color: #8A8F9B;
 }
 #faq .faq-list .collapsed:hover {
-  color: #f82249;
+  color: #73F342;
 }
 #faq .faq-list .collapsed .icon-show {
   display: inline-block;
@@ -1084,7 +1084,7 @@ h1, h2, h3, h4, h5, h6 {
   border: 0;
   padding: 9px 25px;
   cursor: pointer;
-  background: #f82249;
+  background: #73F342;
   color: #fff;
   transition: all 0.3s ease;
   outline: none;
@@ -1139,7 +1139,7 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 50px;
   padding: 10px 40px;
   transition: all 0.2s;
-  background-color: #f82249;
+  background-color: #73F342;
   border: 0;
   color: #fff;
 }
@@ -1154,7 +1154,7 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 50px;
   padding: 10px 40px;
   transition: all 0.2s;
-  background-color: #f82249;
+  background-color: #73F342;
   border: 0;
   color: #fff;
 }
@@ -1176,7 +1176,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 48px;
   display: inline-block;
   margin-bottom: 10px;
-  color: #f82249;
+  color: #73F342;
 }
 #contact .contact-info address, #contact .contact-info p {
   margin-bottom: 0;
@@ -1193,7 +1193,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #4869df;
 }
 #contact .contact-info a:hover {
-  color: #f82249;
+  color: #73F342;
 }
 #contact .contact-address, #contact .contact-phone, #contact .contact-email {
   margin-bottom: 20px;
@@ -1252,7 +1252,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 14px;
 }
 #contact .php-email-form input:focus, #contact .php-email-form textarea:focus {
-  border-color: #f82249;
+  border-color: #73F342;
 }
 #contact .php-email-form input {
   padding: 10px 15px;
@@ -1261,7 +1261,7 @@ h1, h2, h3, h4, h5, h6 {
   padding: 12px 15px;
 }
 #contact .php-email-form button[type=submit] {
-  background: #f82249;
+  background: #73F342;
   border: 0;
   padding: 10px 40px;
   color: #fff;
@@ -1344,7 +1344,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 16px;
 }
 #footer .footer-top .social-links a:hover {
-  background: #f82249;
+  background: #73F342;
   color: #fff;
 }
 #footer .footer-top h4 {
@@ -1354,7 +1354,7 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
   position: relative;
   padding-bottom: 12px;
-  border-bottom: 2px solid #f82249;
+  border-bottom: 2px solid #73F342;
 }
 #footer .footer-top .footer-links {
   margin-bottom: 30px;
@@ -1366,7 +1366,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 #footer .footer-top .footer-links ul i {
   padding-right: 5px;
-  color: #f82249;
+  color: #8A8F9B;
   font-size: 18px;
 }
 #footer .footer-top .footer-links ul li {
@@ -1377,10 +1377,10 @@ h1, h2, h3, h4, h5, h6 {
   padding-top: 0;
 }
 #footer .footer-top .footer-links ul a {
-  color: #0ba506;
+  color: #8A8F9B;
 }
 #footer .footer-top .footer-links ul a:hover {
-  color: #f82249;
+  color: #8A8F9B;
 }
 #footer .footer-top .footer-contact {
   margin-bottom: 30px;
@@ -1397,7 +1397,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 65%;
 }
 #footer .footer-top .footer-newsletter input[type=submit] {
-  background: #f82249;
+  background: #73F342;
   border: 0;
   width: 35%;
   padding: 6px 0;
