--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,11 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+
+.black-h2 {
+  color: #040919;
+}
+
 body {
   background: #03060D;
   color: #2f3138;
@@ -1293,7 +1298,7 @@ h1, h2, h3, h4, h5, h6 {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: #112210;
+  background: #07102e;
   padding: 0 0 25px 0;
   color: #eee;
   font-size: 14px;
