--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,11 @@
-/**
-* Template Name: TheEvent - v4.7.0
-* Template URL: https://bootstrapmade.com/theevent-conference-event-bootstrap-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
+
 
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+.hoodie{
+  color: #73F342;
+}
 .copyright strong{
   color: #18d26e;
 }
@@ -65,7 +63,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
   height: 100%;
   overflow: visible;
-  background: #fff url("../img/preloader.svg") no-repeat center center;
+  /* background: #fff url("../img/preloader.svg") no-repeat center center; */
 }
 
 /*--------------------------------------------------------------
@@ -418,7 +416,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url(../img/hero-bg.jpg) top center;
+  /* background: url(../img/hero-bg.jpg) top center; */
   background-size: cover;
   overflow: hidden;
   position: relative;
@@ -430,7 +428,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 #hero:before {
   content: "";
-  background: rgba(6, 12, 34, 0.8);
+  background: rgba(0, 0, 0, 0.8);
   position: absolute;
   bottom: 0;
   top: 0;
