--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1162,7 +1162,7 @@ h1, h2, h3, h4, h5, h6 {
   border-right: 1px solid #e0e5fa;
   border-bottom: 1px solid #e0e5fa;
   overflow: hidden;
-  background: rgba(255, 255, 255, 0.5);
+  /* background: rgba(255, 255, 255, 0.5); */
   height: 160px;
 }
 #supporters .supporter-logo:hover img {
@@ -1170,6 +1170,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 #supporters img {
   transition: all 0.4s ease-in-out;
+  height: 80px;
 }
 
 /*--------------------------------------------------------------
