--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1149,18 +1149,18 @@ h1, h2, h3, h4, h5, h6 {
 #supporters {
   padding: 60px 0;
 }
-#supporters .supporters-wrap {
+/* #supporters .supporters-wrap {
   border-top: 1px solid #e0e5fa;
   border-left: 1px solid #e0e5fa;
   margin-bottom: 30px;
-}
+} */
 #supporters .supporter-logo {
   padding: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-right: 1px solid #e0e5fa;
-  border-bottom: 1px solid #e0e5fa;
+  /* border-right: 1px solid #e0e5fa; */
+  /* border-bottom: 1px solid #e0e5fa; */
   overflow: hidden;
   /* background: rgba(255, 255, 255, 0.5); */
   height: 160px;
