--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -491,7 +491,7 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 21px;
     background-color: black;
     width: fit-content;
-    border: 2px solid #73F342;
+    /* border: 2px solid #73F342; */
     margin: 79px 2px 2px 0px;
 }
 .dates{
