--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -491,7 +491,7 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 21px;
     background-color: black;
     width: fit-content;
-    /* border: 2px solid #73F342; */
+    border: 2px solid #73F342;
     margin: 79px 2px 2px 0px;
 }
 .dates{
@@ -1142,6 +1142,13 @@ h1, h2, h3, h4, h5, h6 {
     margin-top: 6px;
   }
 }
+.cert{
+  margin-top: 90px;
+}
+
+.certify{
+  margin: 2px 2px 2px 2px;
+}
 
 /*--------------------------------------------------------------
 # Sponsors Section
@@ -1170,7 +1177,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 #supporters img {
   transition: all 0.4s ease-in-out;
-  height: 80px;
+  height: 166px;
 }
 
 /*--------------------------------------------------------------
